# terragrunt-generator

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  codevov.yml  multicz.toml  osv-scanner.toml  pyproject.toml  pytest.ini  setup.py  zensical.toml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: bump.yml  ci.yml  dependabot-rewrite.yml  main.yml  publish.yml  python-bump.yml  python-publish.yml  test.yml
.multicz/: state.json
docs/: bootstrap-gcp.md  index.md  installation.md  stability.md  usage.md
examples/modules/: main.tf  variables.tf
generator/: __init__.py  generate.py  git.py  main.py  reader.py  utils.py  yaml.py
scripts/: add_license_header.py  rewrite-dependabot-commit.sh
src/generator/: __init__.py  generate.py  main.py  reader.py  utils.py
src/terragrunt_generator/: __init__.py  __main__.py  generate.py  git.py  main.py  reader.py  utils.py  yaml.py
tests/: test_cli.py  test_generate.py  test_get_yaml.py  test_git.py  test_reader.py  test_utils.py  test_yaml.py
