[tool.poetry]
name = "terragrunt-generator"
version = "0.6.1"
description = ""
authors = ["Chris <goabonga@pm.me>"]
readme = "README.md"
packages = [{include = "generator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
python-hcl2 = "^3.0.5"
GitPython = "^3.1.27"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
isort = "^5.10.1"
commitizen = "^2.32.5"
flake8 = "^5.0.4"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.6.1"
tag_format = "$version"
version_files = [
    "pyproject.toml:version"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
terragrunt-generator = 'generator.main:main'

[tool.black]
line-length = 80
target-version = ['py39']
include = '\.pyi?$'
skip-string-normalization = true

[tool.isort]
profile = 'black'
